--- a/popup.html
+++ b/popup.html
@@ -1,18 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jarvis AI</title>
+    <style>
+      body {
+        font-family: "Arial", sans-serif;
+        background-color: #fff;
+        margin: 20px;
+        text-align: center;
+        width: 300px;
+      }
 
-<head>
-    <link rel="stylesheet" href="styles.css">
-</head>
+      .title {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
 
-<body>
-    <h1>Jarvis AI</h1>
+      h1 {
+        color: #333;
+        margin-bottom: 10px;
+      }
+
+      p {
+        color: #666;
+        margin-bottom: 20px;
+      }
+
+      a {
+        color: #4285f4;
+        text-decoration: none;
+        font-weight: bold;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="title">
+      <img src="icon48.png" alt="logo" width="40" height="30" />
+      <h1>Jarvis AI</h1>
+    </div>
+
     <p>
-        Use GPT-4 to generate text, translate languages, and write code on any website.
+      Leverage OpenAI's GPT model for text generation, language translation, and
+      coding tasks across various online platforms.
     </p>
-    <p>
-        <a href="options.html" target="_blank">Open Options</a>
-    </p>
-</body>
-
+    <p><a href="options.html" target="_blank">Configure Open AI API key</a></p>
+  </body>
 </html>
